Fix style for links in details blocks in dark mode

--- a/docusaurus/src/scss/details.scss
+++ b/docusaurus/src/scss/details.scss
@@ -33,3 +33,10 @@ details.alert {
     text-decoration: var(--ifm-link-decoration);
   }
 }
+
+@include dark {
+  details a {
+    color: var(--strapi-primary-500);
+    font-weight: 700;
+  }
+}
